2006-12-09 Harri Pitkänen <hatapitk@iki.fi>

        * Fix character case check for words with punctuation.

2006-12-07 Harri Pitkänen <hatapitk@iki.fi>

	* Disable voikkohyphenate on Windows by making it print out an error
	  about unsupported operating system. This is because it is questionable
	  whether linking against msvcp60.dll is allowed by the GPL and no other
	  library that I know of provides mbrlen on Windows.

2006-12-05 Harri Pitkänen <hatapitk@iki.fi>

	* Make libiconv optional on Windows. If it is not available,
	  only conversion to/from UTF-8 and CP850 is possible.

2006-12-01 Harri Pitkänen <hatapitk@iki.fi>

	* Support all modes of dictionary selection in Windows.

2006-11-30 Harri Pitkänen <hatapitk@iki.fi>

	* Refactoring in voikko_setup.c to prepare for better Windows
	  support.

2006-11-16 Harri Pitkänen <hatapitk@iki.fi>

        * Support parallel installations of Automake versions
          1.9 and 1.10. Both seem to work, but default will still
          be 1.9.

2006-11-11 Harri Pitkänen  <hatapitk@iki.fi>

	* Use iconv charset "UCS-2-INTERNAL" instead of "WCHAR_T" on Windows,
	  because not every version of libiconv supports WCHAR_T.
	* Fixes to configure.ac and src/Makefile.am to better support linking
	  against shared libraries on Windows.

2006-10-27 Harri Pitkänen  <hatapitk@iki.fi>

	* Implement version checking for malaga project files.

2006-10-26 Harri Pitkänen  <hatapitk@iki.fi>

	* Clean up library checks in configure.ac, remove special check
	  for malaga shared library.
	* Add AC_LIBTOOL_WIN32_DLL to configure.ac to help building
	  shared libraries on Windows.

2006-10-05 Harri Pitkänen  <hatapitk@iki.fi>

	* Add missing 'const' to usage example in voikko.h.
	* Add new exported function init_libvoikko_with_path.
	* Adjust voikkospell and voikkohyhenate to accept new -p option that
	  can be used to set the dictionary path.
	* Improve manual page formatting.
	* Increase version to 1.2 and libtool version info to 3:0:2.
